[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Дмитрий Екименков <sdakhj@mail.ru>"]
readme = "README.md"
packages = [{include = "test"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
welcome = 'test.welconee:main'
